--- a/src/KristofferStrube.Blazor.FileSystem/KristofferStrube.Blazor.FileSystem.csproj
+++ b/src/KristofferStrube.Blazor.FileSystem/KristofferStrube.Blazor.FileSystem.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="KristofferStrube.Blazor.FileAPI" Version="0.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.0" />
   </ItemGroup>
 
