--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/KristofferStrube.Blazor.FileSystem.WasmExample.csproj
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/KristofferStrube.Blazor.FileSystem.WasmExample.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.45" />
-    <PackageReference Include="KristofferStrube.ActivityStreams" Version="0.1.0-alpha.5" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
+    <PackageReference Include="KristofferStrube.ActivityStreams" Version="0.1.0" />
     <PackageReference Include="MessagePack" Version="2.5.64-alpha" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.0" PrivateAssets="all" />
     <PackageReference Include="TG.Blazor.IndexedDB" Version="1.5.0-preview" />
     <PackageReference Include="System.Reactive.Linq" Version="5.0.0" />
