--- a/.EditorConfig
+++ b/.EditorConfig
@@ -41,8 +41,8 @@ csharp_style_deconstructed_variable_declaration = true
 dotnet_diagnostic.IDE0042.severity = suggestion
 dotnet_style_prefer_conditional_expression_over_assignment = true
 dotnet_diagnostic.IDE0045.severity = warning
-dotnet_style_prefer_conditional_expression_over_return = true
-dotnet_diagnostic.IDE0046.severity = warning
+dotnet_style_prefer_conditional_expression_over_return = false
+dotnet_diagnostic.IDE0046.severity = none
 dotnet_style_prefer_compound_assignment = true
 dotnet_diagnostic.IDE0054.severity = warning
 dotnet_diagnostic.IDE0074.severity = warning
